Mobile screen update

--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
         <div class="container mt-5 mb-md-5 mt-md-5 mb-md-5 container__form">
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <form>
+                    <form action="php/connect.php" method="post">
                         <div class="mb-md-3">
                             <div class="corner-image--left">
                                 <img src="assets/sparks-left-alignment.svg" alt="Small Picture">
@@ -236,23 +236,23 @@
     <section class="socials__container">
         <div class="container text-center pt-5 pb-5">
             <div class="row align-items-center">
-                <div class="col-sm offset-bt">
+                <div class="col-sm">
                     <a href="https://github.com/alabak48" target="_blank" rel="noreferrer noopener">
                         <img src="assets/icons/github-logo.svg" alt="Github Logo" />
                     </a>
                 </div>
-                <div class="col-sm offset-bt">
+                <div class="col-sm">
                     <a href="https://www.linkedin.com/in/anja-labak-1b71b7229/" target="_blank"
                         rel="noreferrer noopener">
                         <img src="assets/icons/linkedin-logo.svg" alt="Linkedin Logo" />
                     </a>
                 </div>
-                <div class="col-sm offset-bt">
+                <div class="col-sm">
                     <a href="https://www.instagram.com/anjalabak/" target="_blank" rel="noreferrer noopener">
                         <img src="assets/icons/instagram-logo.svg" alt="Instagram Logo" />
                     </a>
                 </div>
-                <div class="col-sm offset-bt">
+                <div class="col-sm">
                     <a href="https://www.facebook.com/anja.labak.4/" target="_blank" rel="noreferrer noopener"">
                     <img src=" assets/icons/facebook-logo.svg" alt="Facebook logo" />
                     </a>
