--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
         <div class="container mt-5 mb-md-5 mt-md-5 mb-md-5 container__form">
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <form action="php/connect.php" method="post">
+                    <form action="https://formsubmit.co/3c13fc3581c7211a96e12302ab878cba" method="POST">
                         <div class="mb-md-3">
                             <div class="corner-image--left">
                                 <img src="assets/sparks-left-alignment.svg" alt="Small Picture">
@@ -206,19 +206,19 @@
                             <h5>Get In <span id="colored">Touch</span></h5>
                             <p>Let's collaborate and turn your digital visions into captivating realities.</p>
                             <label for="firstname" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp">
+                            <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp" name="name">
                         </div>
                         <div class="mb-3">
                             <label for="lastname" class="form-label">Surname</label>
-                            <input type="text" class="form-control" id="lastname">
+                            <input type="text" class="form-control" id="lastname" name="surname">
                         </div>
                         <div class="mb-3">
                             <label for="emailaddress" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="emailaddress">
+                            <input type="email" class="form-control" id="emailaddress" name="email">
                         </div>
                         <div class="mb-3">
                             <label for="message">Leave Me a Message</label>
-                            <textarea class="form-control" id="message" rows="3"></textarea>
+                            <textarea class="form-control" id="message" rows="3" name="message"></textarea>
                         </div>
                         <button type="submit" class="btn btn--primary btn--primary--xl">Submit</button>
                     </form>
