--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Anja Labak - UI Developer Portfolio. Creating engaging and user-friendly digital experiences.">
+    <meta name="keywords" content="UI developer, web development, HTML, CSS, JavaScript, React, portfolio">
+    <meta name="author" content="Anja Labak">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -12,16 +16,17 @@
     <script defer="defer" src="Mechanics%20-%20Homepage_files/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-
     <title>Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon.svg">
+
 </head>
 
 <body>
     <!-- Navigation -->
-    <header id="navigation">
-        <div class="corner-image--top-left">
-            <img src="assets/rectangle.svg" alt="Small Picture">
-        </div>
+    <div class="corner-image--top-left">
+        <img src="assets/rectangle.svg" alt="Small Picture">
+    </div>
+    <header id="navigation" class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top spc-5">
             <a class="navbar-brand" href="#navigation">
                 <img src="assets/logo.svg" alt="Page Logo" id="logo">
@@ -33,22 +38,22 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active mx-2">
-                        <a class="nav-link" href="#home" id="home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#about" id="about">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#projects" id="projects">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#skills" id="skills">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#socials" id="socials">Socials</a>
+                        <a class="nav-link" href="#socials">Socials</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#contact" id="contact">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +65,7 @@
 
     <!-- Main -->
 
-    <main>
+    <main id="home">
         <div class="container mb-md-5 mb-sm-5">
             <div class="row align-items-center">
                 <div class="col-md-6 mb-md-0">
@@ -86,7 +91,7 @@
 
     <!-- About -->
 
-    <section class="spc-md-5 offset">
+    <section class="spc-md-5 offset" id="about">
         <div class="container container__about">
             <div class="row align-items-center spc">
                 <div class="col-md-6 text-left">
@@ -113,7 +118,7 @@
 
     <!-- Cards -->
 
-    <section class="mt-md-5 mb-md-5 spc-5 offset">
+    <section class="mt-md-5 mb-md-5 spc-5 offset" id="projects">
         <div class="container card__container justify-content-center">
             <h2 class="mb-md-5 offset-bt">My Projects</h2>
             <div class="row spc-md-5">
@@ -167,7 +172,7 @@
 
     <!-- Spliter Section -->
 
-    <section class="skills spc-md-5 mb-5">
+    <section class="skills spc-md-5 mb-5" id="skills">
         <div class="container-fluid text-center d-flex flex-column pt-md-5 pb-md-5">
             <div class="row align-items-center">
                 <div class="col skills__col--first">
@@ -194,7 +199,7 @@
     <!-- Spliter Section -->
 
 
-    <section class="offset">
+    <section class="offset" id="contact">
         <div class="container mt-5 mb-md-5 mt-md-5 mb-md-5 container__form">
             <div class="row">
                 <div class="col-md-6 mb-4">
@@ -218,7 +223,7 @@
                         </div>
                         <div class="mb-3">
                             <label for="message">Leave Me a Message</label>
-                            <textarea class="form-control" id="message" rows="3" name="message"></textarea>
+                            <textarea class="form-control" id="message" rows="3" name="mess"></textarea>
                         </div>
                         <button type="submit" class="btn btn--primary btn--primary--xl">Submit</button>
                     </form>
@@ -233,7 +238,7 @@
         </div>
     </section>
 
-    <section class="socials__container">
+    <section class="socials__container" id="socials">
         <div class="container text-center pt-5 pb-5">
             <div class="row align-items-center">
                 <div class="col-sm">
@@ -261,7 +266,7 @@
         </div>
     </section>
 
-    <footer class="py-1 pt-5 pb-5">
+    <footer class="py-1 pt-5 pb-5" id="footer">
         <div class="container">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
