--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,12 @@
 </head>
 
 <body>
+
     <!-- Navigation -->
     <div class="corner-image--top-left">
         <img src="assets/rectangle.svg" alt="Small Picture">
     </div>
+
     <header id="navigation" class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top spc-5">
             <a class="navbar-brand" href="#navigation">
@@ -80,7 +82,7 @@
                     </button>
                 </div>
                 <div class="col-md-6 text-right">
-                    <img src="assets/girl-code-css-html.png" alt="Illustrated Computer" id="main-image"
+                    <img src="assets/girl-code-css-html.png" alt="Illustration of Girl with computer" id="main-image"
                         class="img-fluid" />
                 </div>
             </div>
@@ -95,11 +97,12 @@
         <div class="container container__about">
             <div class="row align-items-center spc">
                 <div class="col-md-6 text-left">
-                    <img src="assets/girl-checklist-code-tech.png" alt="Illustration Girl Code HTML CSS"
+                    <img src="assets/girl-checklist-code-tech.png" alt="Illustration Girl Code HTML CSS" 
+                        aria-labelledby="image-description"
                         class="cover__img">
                 </div>
                 <div class="col-md-6 my-md-5">
-                    <h2>About Me</h2>
+                    <h2 id="image-description">About Me</h2>
                     <p>
                         With a solid foundation in HTML, CSS, and JavaScript, I bring websites to life with interactive
                         and visually appealing elements. My proficiency in React allows me to craft dynamic and
@@ -134,7 +137,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4 mb-4 offset-bt">
                     <div class="card">
                         <img class="card-img-top" src="assets/project-two.png" alt="Card image cap">
@@ -147,7 +149,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col-md-4 mb-4 offset-bt">
                     <div class="card">
                         <div class="corner-image--right">
@@ -181,16 +182,20 @@
                     </h4>
                 </div>
                 <div class="col-sm">
-                    <img src="assets/icons/html.svg" alt="HTML" />
+                    <img src="assets/icons/html.svg" alt="HTML" aria-labelledby="HTML"/>
+                    <p class="skill" id="HTML">HTML</p>
                 </div>
                 <div class="col-sm">
-                    <img src="assets/icons/css.svg" alt="CSS" />
+                    <img src="assets/icons/css.svg" alt="CSS" aria-labelledby="CSS"/>
+                    <p class="skill" id="CSS">CSS</p>
                 </div>
                 <div class="col-sm">
-                    <img src="assets/icons/javascript.svg" alt="JavaScript" />
+                    <img src="assets/icons/javascript.svg" alt="JavaScript" aria-labelledby="JavaScript"/>
+                    <p class="skill" id="JavaScript">JavaScript</p>
                 </div>
-                <div class="col-sm offset-bt">
-                    <img src="assets/icons/react.svg" alt="React JavaScript" />
+                <div class="col-sm">
+                    <img src="assets/icons/react.svg" alt="React JavaScript" aria-labelledby="React JavaScript"/>
+                    <p class="skill" id="React">React</p>
                 </div>
             </div>
         </div>
@@ -243,23 +248,27 @@
             <div class="row align-items-center">
                 <div class="col-sm">
                     <a href="https://github.com/alabak48" target="_blank" rel="noreferrer noopener">
-                        <img src="assets/icons/github-logo.svg" alt="Github Logo" />
+                        <img src="assets/icons/github-logo.svg" alt="Github Logo" aria-labelledby="Github"/>
+                        <p id="Github">Github</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="https://www.linkedin.com/in/anja-labak-1b71b7229/" target="_blank"
                         rel="noreferrer noopener">
-                        <img src="assets/icons/linkedin-logo.svg" alt="Linkedin Logo" />
+                        <img src="assets/icons/linkedin-logo.svg" alt="Linkedin Logo" aria-labelledby="Linkedin"/>
+                        <p id="Linkedin">Linkedin</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="https://www.instagram.com/anjalabak/" target="_blank" rel="noreferrer noopener">
-                        <img src="assets/icons/instagram-logo.svg" alt="Instagram Logo" />
+                        <img src="assets/icons/instagram-logo.svg" alt="Instagram Logo" aria-labelledby="Instagram"/>
+                        <p id="Instagram">Instagram</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="https://www.facebook.com/anja.labak.4/" target="_blank" rel="noreferrer noopener"">
-                    <img src=" assets/icons/facebook-logo.svg" alt="Facebook logo" />
+                    <img src=" assets/icons/facebook-logo.svg" alt="Facebook logo" aria-labelledby="Facebook"/>
+                    <p id="Facebook">Facebook</p>
                     </a>
                 </div>
             </div>
