--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                     <h1>
                         Hi,<br> I'm Anja
                     </h1>
-                    <h2 id="colored">UI Developer</h2>
+                    <h2 id="colore">UI Developer</h2>
                     <p>A passionate UI developer with a deep-rooted love for creating engaging and
                         user-friendly digital experiences. </p>
                     <button class="btn--primary mb-5">
@@ -216,7 +216,7 @@
                             <h5>Get In <span id="colored">Touch</span></h5>
                             <p>Let's collaborate and turn your digital visions into captivating realities.</p>
                             <label for="firstname" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="firstname" aria-describedby="emailHelp" name="name">
+                            <input type="text" class="form-control" id="firstname" name="name">
                         </div>
                         <div class="mb-3">
                             <label for="lastname" class="form-label">Surname</label>
@@ -236,7 +236,7 @@
                 <div class="col-md-6 mb-4">
                     <iframe title="Google Maps Location"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2793.5792911515173!2d18.678333475979738!3d45.55878812712301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ce7a607148fa3%3A0x3f0cc9e48a295957!2sFaculty%20of%20Humanities%20and%20Social%20Sciences%2C%20University%20of%20Osijek!5e0!3m2!1sen!2shr!4v1692380882840!5m2!1sen!2shr"
-                        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
@@ -249,26 +249,26 @@
                 <div class="col-sm">
                     <a href="https://github.com/alabak48" target="_blank" rel="noreferrer noopener">
                         <img src="assets/icons/github-logo.svg" alt="Github Logo" aria-labelledby="Github"/>
-                        <p id="Github">Github</p>
+                        <h6 id="Github">Github</h6>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="https://www.linkedin.com/in/anja-labak-1b71b7229/" target="_blank"
                         rel="noreferrer noopener">
                         <img src="assets/icons/linkedin-logo.svg" alt="Linkedin Logo" aria-labelledby="Linkedin"/>
-                        <p id="Linkedin">Linkedin</p>
+                        <h6 id="Linkedin">Linkedin</h6>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="https://www.instagram.com/anjalabak/" target="_blank" rel="noreferrer noopener">
                         <img src="assets/icons/instagram-logo.svg" alt="Instagram Logo" aria-labelledby="Instagram"/>
-                        <p id="Instagram">Instagram</p>
+                        <h6 id="Instagram">Instagram</h6>
                     </a>
                 </div>
                 <div class="col-sm">
-                    <a href="https://www.facebook.com/anja.labak.4/" target="_blank" rel="noreferrer noopener"">
+                    <a href="https://www.facebook.com/anja.labak.4/" target="_blank" rel="noreferrer noopener">
                     <img src=" assets/icons/facebook-logo.svg" alt="Facebook logo" aria-labelledby="Facebook"/>
-                    <p id="Facebook">Facebook</p>
+                    <h6 id="Facebook">Facebook</h6>
                     </a>
                 </div>
             </div>
