--- a/src/index.html
+++ b/src/index.html
@@ -25,13 +25,13 @@
 
     <!-- Navigation -->
     <div class="corner-image--top-left">
-        <img src="assets/rectangle.svg" alt="Small Picture">
+        <img src="assets/rectangle.svg" alt="Rectangle with blue, pink and purple colors used for design">
     </div>
 
     <header id="navigation" class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top spc-5">
             <a class="navbar-brand" href="#navigation">
-                <img src="assets/logo.svg" alt="Page Logo" id="logo">
+                <img src="assets/logo.svg" alt="Page Logo that says Portfolio" id="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +82,7 @@
                     </button>
                 </div>
                 <div class="col-md-6 text-right">
-                    <img src="assets/girl-code-css-html.png" alt="Illustration of Girl with computer" id="main-image"
+                    <img src="assets/girl-code-css-html.png" alt="Illustration of Girl with computer. The illustration shows three bubbles that say HTML, CSS, and JavaScript" id="main-image"
                         class="img-fluid" />
                 </div>
             </div>
@@ -97,7 +97,7 @@
         <div class="container container__about">
             <div class="row align-items-center spc">
                 <div class="col-md-6 text-left">
-                    <img src="assets/girl-checklist-code-tech.png" alt="Illustration Girl Code HTML CSS" 
+                    <img src="assets/girl-checklist-code-tech.png" alt="    " 
                         aria-labelledby="image-description"
                         class="cover__img">
                 </div>
