Nav position 0% fix

--- a/src/accessiblity/index-0.html
+++ b/src/accessiblity/index-0.html
@@ -11,8 +11,8 @@
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../accessiblity/styles/styles.css">
-    <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../accessiblity/styles/styles.css">
+        <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/buttons/buttons.css">
     <link rel="stylesheet" href="../css/headings/headings.css">
     <script defer="defer" src="Mechanics%20-%20Homepage_files/bootstrap.bundle.min.js"
@@ -28,21 +28,26 @@
     <div class="corner-image--top-left">
         <img src="../assets/rectangle.svg">
     </div>
-    <div class="container-fluid navigation">
-    <div class="navbar navbar-expand-lg navbar-light bg-light sticky-top spc-5 justify-content-center">
-        <img src="../assets/logo.svg">
-        <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <div>Home</div>
-            <div>About</div>
-            <div>My Projects</div>
-            <div>Skills</div>
-            <div>Socials</div>
-            <div>Contact</div>
+    <div class="nav container-fluid justify-content-center mt-3">
+            <div class="navbar navbar-expand-lg navbar-light bg-light sticky-top spc-5 justify-content-center">
+                <img src="../assets/logo.svg" id="logo">
+                <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <div class="navbar-nav">
+                        <div class="nav-item">Home</div>
+                        <div class="nav-item">About</div>
+                        <div class="nav-item">My Projects</div>
+                        <div class="nav-item">Skills</div>
+                        <div class="nav-item">Socials</div>
+                        <div class="nav-item">Contact</div>
+                    </div>
+            </div>
         </div>
     </div>
+    
+    
         <!-- Navigation -->
 
         <!-- Main -->
@@ -52,7 +57,7 @@
                     <div class="h1">
                         Hi,<br> I'm Anja
                     </div>
-                    <div class="h2">UI Developer
+                    <div class="h2" id="colored">UI Developer
                 </div>
                 <div class="p">A passionate UI developer with a deep-rooted love for creating engaging and
                     user-friendly digital experiences. </div>
