--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                     <h1>
                         Hi,<br> I'm Anja
                     </h1>
-                    <h2 id="colore">UI Developer</h2>
+                    <h2 id="colored">UI Developer</h2>
                     <p>A passionate UI developer with a deep-rooted love for creating engaging and
                         user-friendly digital experiences. </p>
                     <button class="btn--primary mb-5">
@@ -97,7 +97,7 @@
         <div class="container container__about">
             <div class="row align-items-center spc">
                 <div class="col-md-6 text-left">
-                    <img src="assets/girl-checklist-code-tech.png" alt="    " 
+                    <img src="assets/girl-checklist-code-tech.png" alt="Illustration of a Girl with notes. The illustration is in purple and yellow color." 
                         aria-labelledby="image-description"
                         class="cover__img">
                 </div>
@@ -211,7 +211,7 @@
                     <form action="https://formsubmit.co/3c13fc3581c7211a96e12302ab878cba" method="POST">
                         <div class="mb-md-3">
                             <div class="corner-image--left">
-                                <img src="assets/sparks-left-alignment.svg" alt="Small Picture">
+                                <img src="assets/sparks-left-alignment.svg" alt="Small Picture with little sparks used as decorative design">
                             </div>
                             <h5>Get In <span id="colored">Touch</span></h5>
                             <p>Let's collaborate and turn your digital visions into captivating realities.</p>
@@ -236,7 +236,7 @@
                 <div class="col-md-6 mb-4">
                     <iframe title="Google Maps Location"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2793.5792911515173!2d18.678333475979738!3d45.55878812712301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475ce7a607148fa3%3A0x3f0cc9e48a295957!2sFaculty%20of%20Humanities%20and%20Social%20Sciences%2C%20University%20of%20Osijek!5e0!3m2!1sen!2shr!4v1692380882840!5m2!1sen!2shr"
-                        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100%x" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
